--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
 
     </div>
         
+<!--
+    <div class="dropdown-menu">
+        <span class="dropdown-item-text">Dropdown item text</span>
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+    </div>    
+-->
+        
     <div id='main_control' style="align-items: center; display: block; height: 50px">
         <div style="float: left; width: 5%">
             <button id="reset_btn" type="button" class="btn btn-primary" >Reset</button>
