'Matching_Bug_Fixed'

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
         //reset TagsData and filter
         TagsData = [];
         filterTimes = 0;
+        matchLevel = 1;
         
         //reset KeyWords Space
         $('#inputDiv').empty();
