Key_Words_Change

--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
                     <button class="dropdown-item" type="button">Conceptual Art</button>
                     <button class="dropdown-item" type="button">Photography</button>
                     <button class="dropdown-item" type="button">Installation Art</button>
-                    <button class="dropdown-item" type="button">Young British Artist</button>
-                    <button class="dropdown-item" type="button">Painter</button>
-                    <button class="dropdown-item" type="button">Sculptor</button>
+                    <button class="dropdown-item" type="button">Painting</button>
+                    <button class="dropdown-item" type="button">Sculpture</button>
                     <button class="dropdown-item" type="button">Video Art</button>
                     <button class="dropdown-item" type="button">Performance Art</button>
-                    <button class="dropdown-item" type="button">Designer</button>  
+                    <button class="dropdown-item" type="button">Design</button>  
                     <button class="dropdown-item" type="button">Activist Art</button>              
                 </div>
             </div>            
