--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <div class="col-12" style="display: none" id="Art_Category">
             <div class="btn-group" >
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="ACB">
                     Art Category Menu
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
@@ -77,7 +77,7 @@
         
         <div class="col-12" style="display: none" id="Theme_Category">
             <div class="btn-group" >
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="TMB">
                     Theme Menu
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
