'never_think_about_this'

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         
         <div class="col-12" style="display: none" id="Art_Category">
             <div class="btn-group" >
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="ACB">
-                    Art Category Menu
-                </button>
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="ACB">Art Category Menu</button>
                 <div class="dropdown-menu dropdown-menu-right">
                     <button class="dropdown-item" type="button">Conceptual Art</button>
                     <button class="dropdown-item" type="button">Photography</button>
@@ -77,9 +75,7 @@
         
         <div class="col-12" style="display: none" id="Theme_Category">
             <div class="btn-group" >
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="TMB">
-                    Theme Menu
-                </button>
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="TMB">Theme Menu</button>
                 <div class="dropdown-menu dropdown-menu-right">
                     <button class="dropdown-item" type="button">race</button>
                     <button class="dropdown-item" type="button">gender</button>
