--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                 }
             }
             //重设子目录按钮文字
-            $('#ACB').html = 'Art Categroy Menu';
-            $('#TMB').html = 'Theme Menu';
+            $('#ACB').html('Art Categroy Menu');
+            $('#TMB').html('Theme Menu');
             updatePainting(checkedOne)
           });
     }
