--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <span>
             <label><input id="flags" type="radio" name="fill" value="flags" style="display: none"></label>
         </span>
+        <div style="font-size: 12px; width: 280px; position: absolute; margin-top: 700px; margin-left: 25px;">
+            <p>
+                This data visualization application/website and its content and design are copyright of Xuan Zhang – © Xuan Zhang 2020. All rights reserved. 
+            </p>
+            <p>
+                Any display, redistribution or reproduction of part or all of the contents and design in any form is prohibited without prior consent of Xuan Zhang, except that permission is granted to a user (students or teachers) to use it for research purpose only.
+            </p>
+        </div>
         <div class="col-12">
             <div class="radio" style="float: left; text-align: center">
               <label>
